force-app/main/default/objects/Contact/fields/Authorised_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative_Name__c</fullName>
    <label>Authorised Representative Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>