force-app/main/default/objects/Contact/fields/Authorised_Representative_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative_Nationality__c</fullName>
    <label>Authorised Representative Nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>