force-app/main/default/objects/Contact/fields/Authorised_Representative_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative_Passport_No__c</fullName>
    <label>Authorised Representative Passport No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>