force-app/main/default/objects/Contact/fields/Broker_Resignation_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Resignation_Date__c</fullName>
    <label>Broker Resignation Date</label>
    <type>Date</type>
</CustomField>