force-app/main/default/objects/Contact/fields/Broker_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Termination_Date__c</fullName>
    <label>Broker Termination Date</label>
    <type>Date</type>
</CustomField>