force-app/main/default/objects/Contact/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Broker - New</fullName>
            </value>
            <value>
                <fullName>International Broker - Old</fullName>
            </value>
            <value>
                <fullName>Broker - UAE</fullName>
            </value>
            <value>
                <fullName>Broker - Intnl</fullName>
            </value>
            <value>
                <fullName>Broker - RERA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>