force-app/main/default/objects/Contact/fields/Certificate_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incorporation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Incorporation</label>
    <type>Checkbox</type>
</CustomField>