force-app/main/default/objects/Contact/fields/Certificate_of_Incorporation_Details__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incorporation_Details__c</fullName>
    <label>Certificate of Incorporation Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>