force-app/main/default/objects/Contact/fields/Channel_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>