force-app/main/default/objects/Contact/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Lagos</fullName>
            </value>
            <value>
                <fullName>Elbasan</fullName>
            </value>
            <value>
                <fullName>Mila</fullName>
            </value>
            <value>
                <fullName>Alger</fullName>
            </value>
            <value>
                <fullName>Tlemcen</fullName>
            </value>
            <value>
                <fullName>Launda</fullName>
            </value>
            <value>
                <fullName>Puerto Madero</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Tucuman</fullName>
            </value>
            <value>
                <fullName>Yerevan</fullName>
            </value>
            <value>
                <fullName>Ararat</fullName>
            </value>
            <value>
                <fullName>Gorodskaya</fullName>
            </value>
            <value>
                <fullName>Norakert</fullName>
            </value>
            <value>
                <fullName>Dilijan</fullName>
            </value>
            <value>
                <fullName>Merewethe</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Merewether</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>