force-app/main/default/objects/Contact/fields/CLE__Calling_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>CLE__Calling_Number_Encrypted__c</fullName>
    <label>Calling Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>