force-app/main/default/objects/Contact/fields/CLE__Mobile_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>CLE__Mobile_Encrypted__c</fullName>
    <label>Mobile</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>