force-app/main/default/objects/Contact/fields/CLE__Mobile_Encrypted_Data__c.field-meta.xml
<CustomField>
    <fullName>CLE__Mobile_Encrypted_Data__c</fullName>
    <label>Mobile Encrypted Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>