force-app/main/default/objects/Contact/fields/Combined_Address__c.field-meta.xml
<CustomField>
    <fullName>Combined_Address__c</fullName>
    <label>Combined Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>