force-app/main/default/objects/Contact/fields/Combined_Name__c.field-meta.xml
<CustomField>
    <fullName>Combined_Name__c</fullName>
    <label>Combined Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>