force-app/main/default/objects/Contact/fields/Company_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Business_Name__c</fullName>
    <label>Company/Business Name</label>
    <type>TextArea</type>
</CustomField>