force-app/main/default/objects/Contact/fields/Complete_Arabic_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Arabic_Address__c</fullName>
    <formula>Mailing_Address_Arabic__c &amp; IF(ISBLANK(Mailing_Address_Arabic__c), &quot;&quot;,&quot;,&quot;) &amp;  TEXT( Mailing_City_Arabic__c ) &amp; IF(ISPICKVAL(Mailing_City_Arabic__c,&quot;&quot;), &quot;&quot;, &quot;,&quot;) &amp; TEXT( Mailing_State_Arabic__c ) &amp; IF(ISPICKVAL(Mailing_State_Arabic__c, &quot;&quot;), &quot;&quot;, &quot;,&quot;) &amp; TEXT(  Mailing_Country_Arabic__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Arabic Address</label>
    <type>Text</type>
</CustomField>