force-app/main/default/objects/Contact/fields/Corporate_Stamping_Required__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Stamping_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Stamping Required</label>
    <type>Checkbox</type>
</CustomField>