force-app/main/default/objects/Contact/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+91</fullName>
            </value>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>+93</fullName>
            </value>
            <value>
                <fullName>+7</fullName>
            </value>
            <value>
                <fullName>+44</fullName>
            </value>
            <value>
                <fullName>+971</fullName>
            </value>
            <value>
                <fullName>+966</fullName>
            </value>
            <value>
                <fullName>+965</fullName>
            </value>
            <value>
                <fullName>+968</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>