force-app/main/default/objects/Contact/fields/Current_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Type__c</fullName>
    <label>Current Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>