force-app/main/default/objects/Contact/fields/DocuSign_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Access_Code__c</fullName>
    <label>DocuSign Access Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>