force-app/main/default/objects/Contact/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <label>Emirates ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>