force-app/main/default/objects/Contact/fields/Emirates_ID_present__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_present__c</fullName>
    <label>Emirates ID present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>