force-app/main/default/objects/Contact/fields/Emirates_Id_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Emirates_Id_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emirates Id Uploaded</label>
    <type>Checkbox</type>
</CustomField>