force-app/main/default/objects/Contact/fields/Emirates_Id_Verified__c.field-meta.xml
<CustomField>
    <fullName>Emirates_Id_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emirates Id Verified</label>
    <type>Checkbox</type>
</CustomField>