force-app/main/default/objects/Contact/fields/Formatted_Applicant_Passport_For_Docgen__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Applicant_Passport_For_Docgen__c</fullName>
    <label>Formatted Applicant Passport For Docgen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>