force-app/main/default/objects/Contact/fields/Landline_Number__c.field-meta.xml
<CustomField>
    <fullName>Landline_Number__c</fullName>
    <label>Landline Number</label>
    <type>Phone</type>
</CustomField>