force-app/main/default/objects/Contact/fields/Last_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Status__c</fullName>
    <label>Last Attempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contact - Follow-up</fullName>
            </value>
            <value>
                <fullName>Sobha Landline - Contacted</fullName>
            </value>
            <value>
                <fullName>WhatsApp - Contacted</fullName>
            </value>
            <value>
                <fullName>Email - Contacted</fullName>
            </value>
            <value>
                <fullName>Official Mobile - Contacted</fullName>
            </value>
            <value>
                <fullName>Official Landline - Contacted</fullName>
            </value>
            <value>
                <fullName>WhatsApp Not Available</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>