force-app/main/default/objects/Contact/fields/Last_Notification_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Seen__c</fullName>
    <label>Last Notification Seen</label>
    <type>DateTime</type>
</CustomField>