force-app/main/default/objects/Contact/fields/Mailing_Address_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Arabic__c</fullName>
    <label>Mailing Address_Arabic</label>
    <type>TextArea</type>
</CustomField>