force-app/main/default/objects/Contact/fields/Mailing_Address_same_as_PermanentAddress__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_same_as_PermanentAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address same as PermanentAddress</label>
    <type>Checkbox</type>
</CustomField>