force-app/main/default/objects/Contact/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mailing_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Gwalior</fullName>
            </value>
            <value>
                <fullName>Jabalpur</fullName>
            </value>
            <value>
                <fullName>Ujjain</fullName>
            </value>
            <value>
                <fullName>Malegaon</fullName>
            </value>
            <value>
                <fullName>Nanded</fullName>
            </value>
            <value>
                <fullName>Kolhapur</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Solapur</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Cuttack</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Ludhiana</fullName>
            </value>
            <value>
                <fullName>Sangrur</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Jalandhar</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Kota</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Bikaner</fullName>
            </value>
            <value>
                <fullName>Jodhpur</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Erode</fullName>
            </value>
            <value>
                <fullName>Salem</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Tirunelveli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>